# DancingPuppets

./: README.md  package-lock.json  package.json  pyproject.toml
resources/: puppet_10.glb
src/: index.js  poseSolver.js  puppet.js
src/utils/: draw.js  math.js
