[tool.poetry]
name = "dancepuppet"
version = "0.1.0"
description = ""
authors = ["Emmanuel Seynaeve <manu@lumen5.com>"]

[tool.poetry.dependencies]
python = "^3.9"
rangehttpserver = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
